<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <TextView
        android:id="@+id/textView"
        android:layout_width="91dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/make"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_len_make"
        android:layout_width="343dp"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/ex_make"
        android:inputType="text"
        android:textColor="#BABABA"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/focal"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/add_len_make"
        app:layout_constraintTop_toBottomOf="@+id/add_len_make" />

    <EditText
        android:id="@+id/add_len_aperture"
        android:layout_width="342dp"
        android:layout_height="74dp"
        android:ems="10"
        android:hint="@string/ex_aperture"
        android:inputType="number|numberDecimal"
        android:textColor="#BABABA"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/aperture"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/add_len_FL"
        app:layout_constraintTop_toBottomOf="@+id/add_len_FL" />

    <EditText
        android:id="@+id/add_len_FL"
        android:layout_width="342dp"
        android:layout_height="67dp"
        android:ems="10"
        android:hint="@string/ex_focal"
        android:inputType="number"
        android:textColor="#BABABA"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/save_lens"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_len_aperture" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/cancel_lens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/save" />

</androidx.constraintlayout.widget.ConstraintLayout>
