<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/select"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/len_1"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/len_2"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/len_1"
        app:layout_constraintTop_toBottomOf="@+id/len_1" />

    <Button
        android:id="@+id/len_3"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/len_2"
        app:layout_constraintTop_toBottomOf="@+id/len_2" />

    <Button
        android:id="@+id/len_4"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/len_3"
        app:layout_constraintTop_toBottomOf="@+id/len_3" />

    <Button
        android:id="@+id/delete1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="@+id/len_4"
        app:layout_constraintTop_toBottomOf="@+id/len_4" />

    <Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintStart_toStartOf="@+id/len_4"
        app:layout_constraintTop_toTopOf="@+id/delete1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/op4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/edit" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/op3"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/op2"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/op1"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optional"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="@+id/textView16" />

</androidx.constraintlayout.widget.ConstraintLayout>
